# cosmic-ext-bg

./: .gitignore  .gitlab-ci.yml  ASYNC_LOADING_IMPLEMENTATION.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SHADER_IMPLEMENTATION.md  VIDEO_WALLPAPER.md  flake.nix  justfile
aur/cosmic-bg-ng-git/: .SRCINFO  PKGBUILD
aur/cosmic-bg-settings-git/: .SRCINFO  PKGBUILD
aur/cosmic-ext-bg-git/: .SRCINFO  PKGBUILD
aur/cosmic-ext-bg-settings-git/: .SRCINFO  PKGBUILD
build-aux/: io.github.olafkfreund.CosmicExtBg.Devel.json
config/: Cargo.toml
config/src/: lib.rs  state.rs
cosmic-bg-settings/: Cargo.toml
cosmic-bg-settings/i18n/en/: cosmic_bg_settings.ftl
cosmic-bg-settings/src/: app.rs  config.rs  i18n.rs  main.rs  message.rs
cosmic-bg-settings/src/pages/: mod.rs  wallpaper.rs
cosmic-bg-settings/src/widgets/: mod.rs  preview.rs
cosmic-ext-bg-settings/: Cargo.toml
cosmic-ext-bg-settings/src/: app.rs  config.rs  i18n.rs  main.rs  message.rs
cosmic-ext-bg-settings/src/pages/: mod.rs  wallpaper.rs
cosmic-ext-bg-settings/src/widgets/: mod.rs  preview.rs
data/: com.system76.CosmicBgSettings.desktop  io.github.olafkfreund.CosmicExtBg.desktop  io.github.olafkfreund.CosmicExtBg.metainfo.xml  io.github.olafkfreund.CosmicExtBgSettings.desktop  justfile
debian/: changelog  control  rules
docs/: IMPLEMENTATION_SUMMARY.md  SHADER_IMPLEMENTATION.md  VIDEO_WALLPAPER.md
nix/: module.nix
scripts/: quick-test.sh  test-features.sh
src/: animated.rs  cache.rs  colored.rs  draw.rs  error.rs  img_source.rs  loader.rs  main.rs  scheduler.rs  shader.rs  source.rs  video.rs  wallpaper.rs
src/shaders/: gradient.wgsl  plasma.wgsl  waves.wgsl
