[package]
name = "cosmic-bg"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
color-eyre = "0.6.5"
colorgrad = { workspace = true }
cosmic-bg-config = { path = "./config" }
eyre = "0.6.12"
fast_image_resize = { version = "5.1.4", features = ["image"] }
gstreamer = { version = "0.23", features = ["v1_20"] }
gstreamer-app = { version = "0.23", features = ["v1_20"] }
gstreamer-video = { version = "0.23", features = ["v1_20"] }
image = { workspace = true, features = ["gif", "hdr", "jpeg", "png", "rayon", "webp"] }
jxl-oxide = { version = "0.12.4", features = ["image"] }
notify = "8.2.0"
rand = "0.9.2"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
thiserror = "2.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
walkdir = "2.5"
# GPU shader support
wgpu = "23.0"
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"

[workspace]
members = ["config"]

[workspace.dependencies]
colorgrad = "0.7.2"
image = { version = "0.25.6", default-features = false }
tracing = "0.1.41"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
features = ["calloop"]

[profile.release]
opt-level = 3
