[package]
name = "cosmic-bg-settings"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "COSMIC Desktop background settings application"

[dependencies]
cosmic-bg-config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt", "sync"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow = "1.0"
dirs = "6.0"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = "8"
once_cell = "1.21"
ashpd = { version = "0.10", features = ["tokio"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [
    "multi-window",
    "tokio",
    "winit",
    "wgpu",
]

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
features = ["macro"]
